Made the empty pane for the sidebar elements scale and wrap text correctly

--- a/src/scss/User Interface/emptyState.scss
+++ b/src/scss/User Interface/emptyState.scss
@@ -7,4 +7,12 @@
 	box-shadow: var(--drop-shadow);
 	margin: unset;
 }
+
+.pane-empty {
+	word-wrap: break-word;
+	width: unset;
+	margin: unset;
+	max-width: 200px;
+	text-align: left;
+}
 /* #endregion */
